--- a/src/app/mapfeatures/components/map/map.component.html
+++ b/src/app/mapfeatures/components/map/map.component.html
@@ -1,3 +1,4 @@
 <div id="map_container">
-    <div id="att"></div>
+    <div id="attributes-table"></div>
+    <div id="attributes-table2"></div>
 </div>
